--- a/LinkedInServer/LinkedInServer/pom.xml
+++ b/LinkedInServer/LinkedInServer/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.jtransc</groupId>
+            <artifactId>jtransc-rt</artifactId>
+            <version>0.3.0</version>
+        </dependency>
     </dependencies>
 
 </project>
