--- a/LinkedInClient/LinkedInClient/pom.xml
+++ b/LinkedInClient/LinkedInClient/pom.xml
@@ -31,6 +31,11 @@
             <version>2.3.0</version>
         </dependency>
         <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-scalars</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.32</version>
