--- a/LinkedInClient/LinkedInClient/pom.xml
+++ b/LinkedInClient/LinkedInClient/pom.xml
@@ -52,6 +52,11 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.0</version>
+        </dependency>
     </dependencies>
 
 </project>
